src/scss/player.controls.scss
.player-controls,
.main-controls,
.controls {
    display: flex;
}

.player-controls {
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    align-items: center;
    height: 36px;
    padding: 4px;
    user-select: none;

    @include breakpoint-smallest {
        align-items: flex-end;
        height: 62px;
    }
}

.main-control-btn {
    padding: 0;
    margin-right: 4px;

    svg {
        width: 28px;
        height: 28px;
    }
}

.track-slider-panel {
    display: flex;
    align-items: center;
    flex-grow: 1;
    height: 100%;

    @include breakpoint-smallest {
        position: absolute;
        top: 4px;
        left: 0;
        right: 0;
        height: 24px;
    }
}

.track-time {
    margin-left: 8px;
    margin-right: 8px;
    color: $base-text-color;
    font-size: 12px;
}

.control-slider-container {
    position: relative;
    height: 100%;
    width: 100%;
}

.control-slider {
    overflow: hidden;
    width: 100%;
    height: 100%;
    cursor: pointer;

    &:hover, &:active {
        & + .slider-label:not(.hidden) {
            display: block;
        }
    }

    &:active .slider-thumb {
        background-color: #aaa;
    }

    &:focus {
        @extend %focus-styles;
    }
}

.slider-inner {
    position: relative;
    display: flex;
    align-items: center;
    width: calc(100% - 12px);
    height: 100%;
}

.slider-thumb {
    position: absolute;
    width: 12px;
    height: 12px;
    border: 3px solid #ddd;
    border-radius: 50%;
    background-color: #ddd;
    will-change: left;

    &::before, &::after {
        z-index: -1;
        content: "";
        position: absolute;
        top: 50%;
        display: block;
        height: 4px;
        margin-top: -2px;
    }

    &::before {
        background-color: $brand-color;
    }

    &::after {
        left: 0;
        background-color: $color2;
    }
}

.track-slider-thumb {
    &::before, &::after {
        width: 100vw;
    }

    &::before {
        left: -100vw;
    }
}

.slider-label {
    left: 0;
    bottom: 28px;
    display: none;
    min-width: 40px;
    padding: 4px;
    font-size: 13px;
    text-align: center;
    transform: translateX(-50%);
    will-change: left;

    &.hidden {
        display: none;
    }

    @include popup-arrow {
        bottom: -4px;
        left: 50%;
        border-top: 4px solid $color1;
        filter: drop-shadow(0 1px 1px $color2);
        transform: translateX(-50%);
    }
}

.controls {
    @include breakpoint-smallest {
        margin-left: auto;
    }
}

.control-btn {
    margin-right: 4px;
}

.volume-controls {
    display: flex;
    align-items: center;
}

.volume-slider-container {
    width: 100px;
    margin-left: 4px;
    margin-right: 8px;
}

.volume-slider-thumb {
    &::before, &::after {
        width: 100px;
    }

    &::before {
        left: -100px;
    }
}

